# dual_ur5_husky_mujoco

./: .README.md.swp  LICENSE  README.md  pybullet.py
dual_ur5_husky/: gripper.xml  mobile_pick_and_place.xml  robot_gripper_l.xml  robot_gripper_r.xml  robot_husky_mobile.xml  robot_ur5_l.xml  robot_ur5_r.xml  shared.xml
dual_ur5_teleop_general/: CMakeLists.txt  package.xml
dual_ur5_teleop_general/launch/: teleop_general.launch
dual_ur5_teleop_general/src/: dual_ur5_teleop_general.py
husky_control/config/: control_flir_ptu.yaml
husky_description/urdf/: decorations.urdf.xacro  description.xacro  dual_arm_husky.urdf.xacro  generate_dual_arm_husky_urdf.sh  husky.urdf.xacro
husky_dual_ur5_moveit_config/: collisions.txt  generate_collision_tags.py
husky_dual_ur5_moveit_config/config/: husky.srdf  joint_limits.yaml  padding.yaml  real_controllers.yaml  sim_controllers.yaml
husky_dual_ur5_moveit_config/launch/: demo.launch  husky_dual_ur5_moveit_controller_manager.launch  husky_moveit_sensor_manager.launch.xml  moveit.rviz  planning_context.launch
